--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,36 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: red;
+    background-color: rgb(191, 240, 132);
     color: white;
     text-align: center;
  }
+
+ .footerDiv
+ {
+    
+    width:25%;
+ }
+ 
+ #contactDiv
+ {
+ float:left;
+ }
+ 
+ #iconicDiv
+ {
+    margin-top: 15px;
+    float:left;
+ }
+ 
+ #categorieDiv
+ {
+    float:left;
+ }
+
+ #suivieDiv
+ {
+    float:left;
+ }
+ 
+ 
