--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
+<app-carousel></app-carousel>
+
+
+<app-footer></app-footer>
