--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-header></app-header>
+<app-header [panierProduits]="panierProduits"></app-header>
 <app-carousel></app-carousel>
 
 
