bouton panier BRR

--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -15,6 +15,7 @@
           </li>
         </ul>
         <p>Panier piano</p>
+        <button type="button" class="btn btn-outline-primary">Passe ta commande !</button>
       </div>
     </div>
 
