--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header [panierProduits]="panierProduits"></app-header>
-<app-header></app-header>
 <app-carousel></app-carousel>
+<app-filtre-board></app-filtre-board>
 <product-list [listeProduit]="produits"></product-list>
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
