--- a/src/app/filtre-board/filtre-board.component.html
+++ b/src/app/filtre-board/filtre-board.component.html
@@ -3,50 +3,9 @@
     <div class="col-xs-6 col-sm-3">
       <div id="accordion" class="panel panel-primary behclick-panel">
         <div class="panel-heading">
-          <h3 class="panel-title">Search Filter Car</h3>
+          <h3 class="panel-title">Recherche Articles</h3>
         </div>
         <div class="panel-body">
-          <div class="panel-heading ">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" href="#collapse0">
-                <i class="indicator fa fa-caret-down" aria-hidden="true"></i> Price
-              </a>
-            </h4>
-          </div>
-          <div id="collapse0" class="panel-collapse collapse in">
-            <!-- à modifier -->
-            <ul class="list-group">
-              <li class="list-group-item">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value=""> 0 - 1000$
-                  </label>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value=""> 1000$ - 2000$
-                  </label>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value=""> 2000$ - 6000$
-                  </label>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value=""> More Than 6000$
-                  </label>
-                </div>
-              </li>
-            </ul>
-            <!-- fin à modifier -->
-          </div>
 
           <div class="panel-heading ">
             <h4 class="panel-title">
@@ -80,10 +39,25 @@
               </li>
             </ul>
           </div>
+
+          <div class="panel-heading ">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" href="#collapse0">
+                <i class="indicator fa fa-caret-down" aria-hidden="true"></i> Price
+              </a>
+            </h4>
+          </div>
+          <div id="collapse0" class="panel-collapse collapse in">
+            <!-- à modifier -->
+            <input type="range" min="1" max="100" value="80" class="slider" id="myRange">
+            <!-- fin à modifier -->
+          </div>
+
+
           <div class="panel-heading">
             <h4 class="panel-title">
               <a data-toggle="collapse" href="#collapse3">
-                <i class="indicator fa fa-caret-down" aria-hidden="true"></i> Color</a>
+                <i class="indicator fa fa-caret-down" aria-hidden="true"></i> Langue</a>
             </h4>
           </div>
           <div id="collapse3" class="panel-collapse collapse in">
@@ -91,57 +65,28 @@
               <li class="list-group-item">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" value=""> red
+                    <input type="checkbox" value=""> Français
                   </label>
                 </div>
               </li>
               <li class="list-group-item">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" value=""> blue
+                    <input type="checkbox" value=""> Anglais
                   </label>
                 </div>
               </li>
               <li class="list-group-item">
                 <div class="checkbox">
                   <label>
-                    <input type="checkbox" value=""> green
+                    <input type="checkbox" value=""> Espanol
                   </label>
                 </div>
               </li>
             </ul>
           </div>
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" href="#collapse2">
-                <i class="indicator fa fa-caret-right" aria-hidden="true"></i> Collapsible list group</a>
-            </h4>
-          </div>
-          <div id="collapse2" class="panel-collapse collapse">
-            <ul class="list-group">
-              <li class="list-group-item">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value=""> 7
-                  </label>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value=""> 8
-                  </label>
-                </div>
-              </li>
-              <li class="list-group-item">
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox" value=""> 9
-                  </label>
-                </div>
-              </li>
-            </ul>
-          </div>
+
+
         </div>
       </div>
     </div>
