--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header [panierProduits]="panierProduits"></app-header>
 <app-carousel></app-carousel>
-<div id="titleGeneral">----------------Nos Articles----------------</div>
+<div id="titleGeneral">
+    ----------------Nos Articles----------------
+</div>
 <app-filtre-board></app-filtre-board>
 <product-list [listeProduit]="produits"></product-list>
 
