modif db + css list et block

--- a/src/app/product-block/product-block.component.html
+++ b/src/app/product-block/product-block.component.html
@@ -1,5 +1,9 @@
-<div>
-  <div>{{produit.nom}}</div>
-  <div>{{produit.prix}}</div>
-  <div>{{produit.prixPremium}}</div>
+<div class="col-md-4">
+  <div class="product-block">
+    <div class="product-info">
+      <div>{{produit.nom}}</div>
+      <div>{{produit.prix}}</div>
+      <div>{{produit.prixPremium}}</div>
+    </div>
+  </div>
 </div>
