--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-carousel></app-carousel>
 <div id="titleGeneral">----------------Nos Articles----------------</div>
-<product-list [listeProduit]="produits"></product-list>
+<product-list [listeProduit]="produits" [appRootRouter]="appRootRouter"></product-list>
 <app-filtre-board></app-filtre-board>
