Yes ! debug routes + on a découvert l'interet des services

--- a/src/app/product-block/product-block.component.html
+++ b/src/app/product-block/product-block.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div><a routerLink="product-details" routerLinkActive="active" >{{produit.nom}}</a></div>
+  <div><a routerLink="/product-details" >{{produit.nom}}</a></div>
  <div>{{produit.prix}}</div>
   <div>{{produit.prixPremium}}</div>
 </div>
