--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,8 @@
 <div>
-  <product-block *ngFor="let produit of listeProduit"
+  <product-block *ngFor="let produit of produitService.produits"
   (click)='clicked(produit)'
   [produit]="produit"
   [appRootRouter]="appRootRouter"></product-block>
+
+  <a routerLink="/product-details" >Si je clique là...</a>
 </div>
