--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,4 @@
 <app-carousel></app-carousel>
 <div id="titleGeneral">----------------Nos Articles----------------</div>
 <product-list [listeProduit]="produits"></product-list>
-<app-filtre-board></app-filtre-board>
+<app-filtre-board [listBeforeFiltered]="produits"></app-filtre-board>
