--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="col-md-12">
-    <product-block *ngFor="let produit of listeProduit" [produit]="produit" (click)='clicked(produit)'></product-block>
-  </div>
+<div>
+
+  <product-block *ngFor="let produit of listeProduit" [produit]="produit" (click)='clicked(produit)'></product-block>
+
 </div>
