--- a/src/app/product-block/product-block.component.css
+++ b/src/app/product-block/product-block.component.css
@@ -6,7 +6,11 @@
     margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
+    align-content: center;
     border: 1px solid #000;
-    
-
+}
+.product-nom{
+    font-family: 'Bitter', serif;
+    font-size: 14;
+    font-weight: bold;
 }
