--- a/src/app/product-block/product-block.component.html
+++ b/src/app/product-block/product-block.component.html
@@ -1,10 +1,10 @@
 <div class="col-md-4">
   <div class="product-block">
-    <div class="product-info">
-        <div><a routerLink="product-details" routerLinkActive="active" >{{produit.nom}}</a></div>
-      <div>{{produit.prix}}</div>
-      <div>{{produit.prixPremium}}</div>
+    <div class="product-nom">
+      <a routerLink="product-details" routerLinkActive="active">{{produit.nom}}</a>
     </div>
+    <div>{{produit.prix}}</div>
+    <div>{{produit.prixPremium}}</div>
   </div>
 </div>
 <router-outlet></router-outlet>
