--- a/src/app/product-block/product-block.component.html
+++ b/src/app/product-block/product-block.component.html
@@ -2,7 +2,7 @@
   <div class="product-block">
     <div class="product-info">
       <div>
-        <a routerLink="/product-details">{{produit.nom}}</a>
+        <a routerLink="/product-details/{{produit.id}}">{{produit.nom}}</a>
       </div>
       <div>{{produit.prix}}</div>
       <div>{{produit.prixPremium}}</div>
