services pour passer commande

--- a/src/app/order-stage/order-stage.component.html
+++ b/src/app/order-stage/order-stage.component.html
@@ -1,3 +1,10 @@
-<p>
-  order-stage works!
-</p>
+<div class="container">
+  <h3>------------Stage------------</h3>
+  <nav>
+    <a routerLink="/commande" routerLinkActive="active">Recapitulatif</a>
+    <a routerLink="/connexion" routerLinkActive="active">connexion</a>
+    <a routerLink="/livraison" routerLinkActive="active">Livraison</a>
+    <a routerLink="/paiement" routerLinkActive="active">Paiement</a>
+  </nav>
+  
+</div>
