--- a/src/app/order-stage/order-stage.component.html
+++ b/src/app/order-stage/order-stage.component.html
@@ -1,10 +1,33 @@
 <div class="container">
   <h3>------------Stage------------</h3>
-  <nav>
+  <!-- <nav>
     <a routerLink="/commande" routerLinkActive="active">Recapitulatif</a>
     <a routerLink="/connexion" routerLinkActive="active">connexion</a>
     <a routerLink="/livraison" routerLinkActive="active">Livraison</a>
     <a routerLink="/paiement" routerLinkActive="active">Paiement</a>
-  </nav>
+  </nav> -->
   
+
+  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+      <li class="nav-item">
+        <a class="nav-link active" id="pills-recap-tab" data-toggle="pill" href="#pills-recap" role="tab" aria-controls="pills-recap" aria-selected="true">recap</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="pills-connexion-tab" data-toggle="pill" href="#pills-connexion" role="tab" aria-controls="pills-connexion" aria-selected="false">connexion</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" id="pills-livraison-tab" data-toggle="pill" href="#pills-livraison" role="tab" aria-controls="pills-livraison" aria-selected="false">livraison</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" id="pills-paiement-tab" data-toggle="pill" href="#pills-paiement" role="tab" aria-controls="pills-paiement" aria-selected="false">paiement</a>
+        </li>
+    </ul>
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade show active" id="pills-recap" role="tabpanel" aria-labelledby="pills-recap-tab">recap</div>
+      <div class="tab-pane fade" id="pills-connexion" role="tabpanel" aria-labelledby="pills-connexion-tab">connexion</div>
+      <div class="tab-pane fade" id="pills-livraison" role="tabpanel" aria-labelledby="pills-livraison-tab">livraison</div>
+      <div class="tab-pane fade" id="pills-paiement" role="tabpanel" aria-labelledby="pills-paiement-tab">paiement</div>
+    </div>
+    
+
 </div>
