--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,3 +1,8 @@
+<div class="col-sm-2" data-toggle="modal" data-target="#myModal">
+    <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"> Panier</i>
+
+  </div>
+
 <!-- Modal -->
 <div class="modal fade" id="myModal" role="dialog">
   <div class="modal-dialog">
@@ -10,7 +15,8 @@
       </div>
       <div>
         <ul>
-          <li *ngFor="let item of panierProduits">
+          <li *ngFor="let item of panierService.panierProduit">
+            
             {{item.nom}}
           </li>
         </ul>
