validation panier et transfert commande vers order-stage

--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,6 +1,6 @@
 <div class="col-sm-2" data-toggle="modal" data-target="#myModal">
     <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"> Panier</i>
-
+  
   </div>
 
 <!-- Modal -->
@@ -21,7 +21,7 @@
           </li>
         </ul>
         <p>Panier piano</p>
-        <button type="button" class="btn btn-outline-primary">Passe ta commande !</button>
+        <button type="button" class="btn btn-outline-primary" (click)="validerPanier()">Passe ta commande !</button>
       </div>
     </div>
 
