--- a/src/app/order-stage/order-stage.component.html
+++ b/src/app/order-stage/order-stage.component.html
@@ -1,33 +1,65 @@
 <div class="container">
   <h3>------------Stage------------</h3>
-  <!-- <nav>
-    <a routerLink="/commande" routerLinkActive="active">Recapitulatif</a>
-    <a routerLink="/connexion" routerLinkActive="active">connexion</a>
-    <a routerLink="/livraison" routerLinkActive="active">Livraison</a>
-    <a routerLink="/paiement" routerLinkActive="active">Paiement</a>
-  </nav> -->
-  
-
-  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link active" id="pills-recap-tab" data-toggle="pill" href="#pills-recap" role="tab" aria-controls="pills-recap" aria-selected="true">recap</a>
+  <div id="order-stage-tabs">
+    <ul class="nav nav-pills">
+      <li class="active" data-step="recap">
+        <a data-toggle="pill" href="#pills-recap">recap</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pills-connexion-tab" data-toggle="pill" href="#pills-connexion" role="tab" aria-controls="pills-connexion" aria-selected="false">connexion</a>
+      <li data-step="connexion">
+        <a data-toggle="pill" href="#pills-connexion">connexion</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pills-livraison-tab" data-toggle="pill" href="#pills-livraison" role="tab" aria-controls="pills-livraison" aria-selected="false">livraison</a>
+      <li data-step="livraison">
+        <a data-toggle="pill" href="#pills-livraison">livraison</a>
       </li>
-      <li class="nav-item">
-          <a class="nav-link" id="pills-paiement-tab" data-toggle="pill" href="#pills-paiement" role="tab" aria-controls="pills-paiement" aria-selected="false">paiement</a>
-        </li>
+      <li data-step="paiement">
+        <a data-toggle="pill" href="#pills-paiement">paiement</a>
+      </li>
     </ul>
-    <div class="tab-content" id="pills-tabContent">
-      <div class="tab-pane fade show active" id="pills-recap" role="tabpanel" aria-labelledby="pills-recap-tab">recap</div>
-      <div class="tab-pane fade" id="pills-connexion" role="tabpanel" aria-labelledby="pills-connexion-tab">connexion</div>
-      <div class="tab-pane fade" id="pills-livraison" role="tabpanel" aria-labelledby="pills-livraison-tab">livraison</div>
-      <div class="tab-pane fade" id="pills-paiement" role="tabpanel" aria-labelledby="pills-paiement-tab">paiement</div>
+    <div class="tab-content">
+      <div class="tab-pane fade in active" id="pills-recap" data-step="recap">
+        <div>
+          <p>Recapitulatif de votre commande :</p>
+
+          <div *ngFor="let ligneCmd of commandeService.commandeEnCours.ligneCommande">
+            <span>{{ ligneCmd.produit.nom }}</span>
+            <span>{{ ligneCmd.produit.prix }}</span>
+            <span>
+              <input type="number" min="0" [(ngModel)]="ligneCmd.quantite" />
+            </span>
+            <span>{{ ligneCmd.prixTotal() }}</span>
+          </div>
+          <div>{{ commandeService.commandeEnCours.prixTotal() }}</div>
+
+          <button class="btn" (click)="jumpToStep('connexion')">Suivant</button>
+        </div>
+      </div>
+
+      <div class="tab-pane fade" id="pills-connexion" data-step="connexion">
+
+
+        <div>
+          <button class="btn" (click)="jumpToStep('livraison')">Suivant</button>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pills-livraison" data-step="livraison">
+        <div>
+          <label>Adresse de Livraison : </label>
+          <textarea id="adresse" placeholder="Adresse..."></textarea>
+        </div>
+
+        <div>
+          <button class="btn" (click)="jumpToStep('paiement')">Suivant</button>
+        </div>
+      </div>
+      <div class="tab-pane fade" id="pills-paiement" data-step="paiement">
+
+        <div>
+          <button class="btn" >Paiement</button>
+        </div>
+      </div>
     </div>
-    
+  </div>
+  <!-- #order-stage-tabs -->
+
 
 </div>
