--- a/src/app/order-stage/order-stage.component.html
+++ b/src/app/order-stage/order-stage.component.html
@@ -36,26 +36,35 @@
 
       <div class="tab-pane fade" id="pills-connexion" data-step="connexion">
 
+          <label>Login</label>
+          <input type="text" id="login" [(ngModel)]="login" /> <br/>
+          <label>Password</label>
+          <input type="password" id="password" [(ngModel)]="password"/><br/>
+          <button class="btn" (click)="connexion(login, password)">Suivant</button>
 
-        <div>
-          <button class="btn" (click)="jumpToStep('livraison')">Suivant</button>
-        </div>
       </div>
       <div class="tab-pane fade" id="pills-livraison" data-step="livraison">
         <div>
           <label>Adresse de Livraison : </label>
-          <textarea id="adresse" placeholder="Adresse..."></textarea>
+          <textarea id="adresse" placeholder="Adresse..." [(ngModel)]="adresse" ></textarea>
         </div>
 
         <div>
-          <button class="btn" (click)="jumpToStep('paiement')">Suivant</button>
+          <button class="btn" (click)="livraison(adresse)">Suivant</button>
         </div>
       </div>
       <div class="tab-pane fade" id="pills-paiement" data-step="paiement">
 
-        <div>
-          <button class="btn" >Paiement</button>
-        </div>
+          <label>Numero de CB</label>
+          <input type="text" id="numCB" [(ngModel)]="numCB" /> <br/>
+          <label>CVV</label>
+          <input type="text" id="cvv" [(ngModel)]="cvv"/><br/>
+          <label>date d'expiration</label>
+          <input type="text" id="moisExp" [(ngModel)]="moisExp"/>
+          <input type="text" id="anneeExp" [(ngModel)]="anneeExp"/><br/>
+          <label>Nom du porteur</label>
+          <input type="text" id="nomPorteur" [(ngModel)]="nomPorteur"/>
+          <button class="btn" (click)="demandePaiement()">Paiement</button>
       </div>
     </div>
   </div>
