--- a/src/app/order-stage/order-stage.component.html
+++ b/src/app/order-stage/order-stage.component.html
@@ -2,8 +2,8 @@
   <h3>------------Stage------------</h3>
   <div id="order-stage-tabs">
     <ul class="nav nav-pills">
-      <li class="active" data-step="recap">
-        <a data-toggle="pill" href="#pills-recap">recap</a>
+      <li class="active" data-step="commande">
+        <a data-toggle="pill" href="#pills-commande">commande</a>
       </li>
       <li data-step="connexion">
         <a data-toggle="pill" href="#pills-connexion">connexion</a>
@@ -14,9 +14,12 @@
       <li data-step="paiement">
         <a data-toggle="pill" href="#pills-paiement">paiement</a>
       </li>
+      <li data-step="recap">
+        <a data-toggle="pill" href="#pills-recap">Recapitulatif</a>
+      </li>
     </ul>
     <div class="tab-content">
-      <div class="tab-pane fade in active" id="pills-recap" data-step="recap">
+      <div class="tab-pane fade in active" id="pills-commande" data-step="commande">
         <div>
           <p>Recapitulatif de votre commande :</p>
 
@@ -36,17 +39,19 @@
 
       <div class="tab-pane fade" id="pills-connexion" data-step="connexion">
 
-          <label>Login</label>
-          <input type="text" id="login" [(ngModel)]="login" /> <br/>
-          <label>Password</label>
-          <input type="password" id="password" [(ngModel)]="password"/><br/>
-          <button class="btn" (click)="connexion(login, password)">Suivant</button>
+        <label>Login</label>
+        <input type="text" id="login" [(ngModel)]="login" />
+        <br/>
+        <label>Password</label>
+        <input type="password" id="password" [(ngModel)]="password" />
+        <br/>
+        <button class="btn" (click)="connexion(login, password)">Suivant</button>
 
       </div>
       <div class="tab-pane fade" id="pills-livraison" data-step="livraison">
         <div>
           <label>Adresse de Livraison : </label>
-          <textarea id="adresse" placeholder="Adresse..." [(ngModel)]="adresse" ></textarea>
+          <textarea id="adresse" placeholder="Adresse..." [(ngModel)]="adresse"></textarea>
         </div>
 
         <div>
@@ -55,16 +60,22 @@
       </div>
       <div class="tab-pane fade" id="pills-paiement" data-step="paiement">
 
-          <label>Numero de CB</label>
-          <input type="text" id="numCB" [(ngModel)]="numCB" /> <br/>
-          <label>CVV</label>
-          <input type="text" id="cvv" [(ngModel)]="cvv"/><br/>
-          <label>date d'expiration</label>
-          <input type="text" id="moisExp" [(ngModel)]="moisExp"/>
-          <input type="text" id="anneeExp" [(ngModel)]="anneeExp"/><br/>
-          <label>Nom du porteur</label>
-          <input type="text" id="nomPorteur" [(ngModel)]="nomPorteur"/>
-          <button class="btn" (click)="demandePaiement()">Paiement</button>
+        <label>Numero de CB</label>
+        <input type="text" id="numCB" [(ngModel)]="numCB" />
+        <br/>
+        <label>CVV</label>
+        <input type="text" id="cvv" [(ngModel)]="cvv" />
+        <br/>
+        <label>date d'expiration</label>
+        <input type="text" id="moisExp" [(ngModel)]="moisExp" />
+        <input type="text" id="anneeExp" [(ngModel)]="anneeExp" />
+        <br/>
+        <label>Nom du porteur</label>
+        <input type="text" id="nomPorteur" [(ngModel)]="nomPorteur" />
+        <button class="btn" (click)="demandePaiement(numCB, cvv, moisExp, anneeExp, nomPorteur)">Paiement</button>
+      </div>
+      <div class="tab-pane fade" id="pills-recap" data-step="recap">
+        {{ paiementValide }}
       </div>
     </div>
   </div>
