--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header [panierProduits]="panierProduits"></app-header>
 
+<main>
+        <router-outlet ></router-outlet>
+</main>
 
 
-<router-outlet ></router-outlet>
 
 <app-footer></app-footer>
