--- a/src/app/filtre-board/filtre-board.component.html
+++ b/src/app/filtre-board/filtre-board.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-6 col-sm-3">
+    <div class="">
       <div id="accordion" class="panel panel-primary behclick-panel">
         <div class="panel-heading">
           <h3 class="panel-title">Recherche Articles</h3>
