--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container" class="nav1">
     <div class="row">
       <div class="col-sm-2">
-        <h1><a routerLink="/home">Boutique</a></h1>
+        <h2><a routerLink="/home">Boutique Logos</a></h2>
       </div>
       <div class="col-sm-4">
         <div class="input-group">
