--- a/src/app/product-block/product-block.component.css
+++ b/src/app/product-block/product-block.component.css
@@ -1,15 +1,4 @@
-.product-block{
-   
-    padding: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    align-content: center;
-    border: 1px solid #000;
-}
-.product-nom{
-    font-family: 'Bitter', serif;
-    font-size: 14;
-    font-weight: bold;
+img.vignette {
+    height: 150px;
+    
 }
