--- a/src/app/product-block/product-block.component.html
+++ b/src/app/product-block/product-block.component.html
@@ -1,26 +1,13 @@
-<!-- <div class="col-md-4">
-  <div class="product-block">
-    <div class="product-info">
-      <div>
-        <a routerLink="/product-details/{{produit.id}}">{{produit.nom}}</a>
-      </div>
-      <img src="{{ produit.listeImagesProduit[0].urlImage }}">
-      <div>{{produit.prix}}</div>
-      <div>{{produit.prixPremium}}</div>
+<div class="col-sm-6 col-md-4">
+  <div class="thumbnail">
+    <img class="vignette" src="{{ checkImgProd() }}">
+    <div class="caption">
+      <h3>{{produit.nom}}</h3>
+      <p>{{produit.description}}</p>
+      <p>{{afficherPrix()}}€ TTC</p>
+      <p>
+        <a routerLink="/product-details/{{produit.id}}" class="btn btn-primary" role="button">Voir détails</a>
+      </p>
     </div>
-
   </div>
-</div> -->
-
-    <div class="col-sm-6 col-md-4">
-      <div class="thumbnail">
-        <img src="{{ checkImgProd() }}" >
-        <div class="caption">
-          <h3>{{produit.nom}}</h3>
-          <p>{{produit.description}}</p>
-          <p>{{afficherPrix()}}€ TTC</p>
-          <p><a routerLink="/product-details/{{produit.id}}" class="btn btn-primary" role="button">Voir détails</a></p>
-        </div>
-      </div>
-    </div>
-<!-- <router-outlet></router-outlet> -->
+</div>
