--- a/src/app/panier/panier.component.html
+++ b/src/app/panier/panier.component.html
@@ -1,4 +1,4 @@
-<div class="col-sm-2" data-toggle="modal" data-target="#myModal">
+<div class=" col-sm-2" data-toggle="modal" style="color: white;" data-target="#myModal">
     <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"> Panier</i>
   
   </div>
