--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,9 +8,10 @@
         <div class="col-md-2">
             <app-filtre-board [listBeforeFiltered]="produits"></app-filtre-board>
         </div>
-        <div class="col-md-10">
+        <div class="col-md-8">
             <product-list [listeProduit]="produits" [appRootRouter]="appRootRouter"></product-list>
         </div>
+        <div class="col-md-2"></div>
     </div>
 
 </div>
