--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -1,3 +1,24 @@
 button.add-to-cart[disabled]{
     opacity: 0.7;
 }
+span.chemin{
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+div.row{
+    margin-top: 10px;
+}
+
+div.nom-prix{
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+div.description{
+    font-size: 1.0em;
+    font-weight: bold;
+}
+img.image{
+    height: 300px;
+}
